// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`serve fs output > _00 manifest.json 1`] = `
Object {
  "action": Object {
    "default_popup": "src/popup.html",
  },
  "background": Object {
    "service_worker": "service-worker-loader.js",
    "type": "module",
  },
  "content_scripts": Array [
    Object {
      "js": Array [
        "src/content.js-loader.js",
      ],
      "matches": Array [
        "http://*/*",
      ],
    },
  ],
  "manifest_version": 3,
  "name": "test extension",
  "version": "1.0.0",
  "web_accessible_resources": Array [
    Object {
      "matches": Array [
        "<all_urls>",
      ],
      "resources": Array [
        "*",
        "**/*",
      ],
      "use_dynamic_url": false,
    },
  ],
}
`;

exports[`serve fs output > _01 output files 1`] = `
Array [
  "assets/loading-page.hash.js",
  "favicon.ico",
  "manifest.json",
  "service-worker-loader.js",
  "src/App.svelte.js",
  "src/App.svelte__svelte_type--style_lang.css.js",
  "src/assets/svelte.png",
  "src/assets/svelte.png__import.js",
  "src/content.js-loader.js",
  "src/content.js.js",
  "src/lib/Counter.svelte.js",
  "src/lib/Counter.svelte__svelte_type--style_lang.css.js",
  "src/popup.html",
  "vendor/chunk-0.js__v--hash.js",
  "vendor/chunk-1.js__v--hash.js",
  "vendor/chunk-2.js__v--hash.js",
  "vendor/chunk-3.js__v--hash.js",
  "vendor/chunk-4.js__v--hash.js",
  "vendor/chunk-5.js__v--hash.js",
  "vendor/crx-client-port.js",
  "vendor/svelte_internal_client.js__v--hash.js",
  "vendor/svelte_internal_disclose-version.js__v--hash.js",
  "vendor/svelte_internal_flags_legacy.js__v--hash.js",
  "vendor/vite-client.js",
  "vendor/vite-dist-client-env.mjs.js",
  "vendor/webcomponents-custom-elements.js",
]
`;

exports[`serve fs output > _02 optimized deps 1`] = `
Set {
  "src/content.js",
  "src/popup.html",
}
`;

exports[`serve fs output > assets/loading-page.hash.js 1`] = `
"const VITE_URL = "http://localhost:3000";
document.body.innerHTML = \`
<div
      id="app"
      style="
        border: 1px solid #ddd;
        padding: 20px;
        border-radius: 5px;
        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
      "
    >
      <h1 style="color: #333">Vite Dev Mode</h1>
      <p style="color: #666">
        Cannot connect to the Vite Dev Server on <a href="\${VITE_URL}">\${VITE_URL}</a>
      </p>
      <p style="color: #666">
        Double-check that Vite is working and reload the extension.
      </p>
      <p style="color: #666">
        This page will close when the extension reloads.
      </p>
      <button
        style="
          padding: 10px 20px;
          border: none;
          background-color: #007bff;
          color: #fff;
          border-radius: 5px;
          cursor: pointer;
        "
      >
        Reload Extension
      </button>
    </div>\`;
document.body.querySelector("button")?.addEventListener("click", () => {
  chrome.runtime.reload();
});
let tries = 0;
let ready = false;
do {
  try {
    await fetch(VITE_URL);
    ready = true;
  } catch {
    const timeout = Math.min(100 * Math.pow(2, ++tries), 5e3);
    console.log(\`[CRXJS] Vite Dev Server is not available on \${VITE_URL}\`);
    console.log(\`[CRXJS] Retrying in \${timeout}ms...\`);
    await new Promise((resolve) => setTimeout(resolve, timeout));
  }
} while (!ready);
location.reload();
"
`;

exports[`serve fs output > service-worker-loader.js 1`] = `
"import 'http://localhost:3000/@vite/env';
import 'http://localhost:3000/@crx/client-worker';
"
`;

exports[`serve fs output > src/App.svelte.js 1`] = `
"import { createHotContext as __vite__createHotContext } from "/vendor/vite-client.js";import.meta.hot = __vite__createHotContext("/src/App.svelte.js");import "/vendor/svelte_internal_disclose-version.js__v--hash.js";
import "/vendor/svelte_internal_flags_legacy.js__v--hash.js";

App[$.FILENAME] = 'tests/out/vite-svelte/src/App.svelte';

import * as $ from "/vendor/svelte_internal_client.js__v--hash.js";
import logo from "/src/assets/svelte.png__import.js";
import Counter from "/src/lib/Counter.svelte.js";

var root = $.add_locations(
	$.from_html(\`<main class="s-XsEmFtvddWTw"><img alt="Svelte Logo" class="s-XsEmFtvddWTw"/> <h1 class="s-XsEmFtvddWTw">Hello world!</h1> <!> <p class="s-XsEmFtvddWTw">Visit <a href="https://svelte.dev" class="s-XsEmFtvddWTw">svelte.dev</a> to learn how to build Svelte
    apps.</p> <p class="s-XsEmFtvddWTw">Check out <a href="https://github.com/sveltejs/kit#readme" class="s-XsEmFtvddWTw">SvelteKit</a> for
    the officially supported framework, also powered by Vite!</p></main>\`),
	App[$.FILENAME],
	[
		[
			6,
			0,
			[
				[7, 2],
				[8, 2],
				[12, 2, [[13, 10]]],
				[17, 2, [[18, 14]]]
			]
		]
	]
);

function App($$anchor, $$props) {
	$.check_target(new.target);
	$.push($$props, false, App);

	var main = root();
	var img = $.child(main);
	var node = $.sibling(img, 4);

	Counter(node, {});
	$.next(4);
	$.reset(main);
	$.template_effect(() => $.set_attribute(img, 'src', logo));
	$.append($$anchor, main);
	return $.pop({ ...$.legacy_api() });
}

if (import.meta.hot) {
	App = $.hmr(App, () => App[$.HMR].source);

	import.meta.hot.acceptExports(["default"],(module) => {
		$.cleanup_styles('s-XsEmFtvddWTw');
		module.default[$.HMR].source = App[$.HMR].source;
		$.set(App[$.HMR].source, module.default[$.HMR].original);
	});
}

export default App;
import "/src/App.svelte__svelte_type--style_lang.css.js";
"
`;

exports[`serve fs output > src/App.svelte__svelte_type--style_lang.css.js 1`] = `
"import { createHotContext as __vite__createHotContext } from "/vendor/vite-client.js";import.meta.hot = __vite__createHotContext("/src/App.svelte__svelte_type--style_lang.css.js");import { updateStyle as __vite__updateStyle, removeStyle as __vite__removeStyle } from "/vendor/vite-client.js"
const __vite__id = "<root>/src/App.svelte?svelte&type=style&lang.css"
const __vite__css = "\\n  :root {\\n    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen,\\n      Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;\\n  }\\n\\n  main.s-XsEmFtvddWTw {\\n    text-align: center;\\n    padding: 1em;\\n    margin: 0 auto;\\n  }\\n\\n  img.s-XsEmFtvddWTw {\\n    height: 16rem;\\n    width: 16rem;\\n  }\\n\\n  h1.s-XsEmFtvddWTw {\\n    color: #ff3e00;\\n    text-transform: uppercase;\\n    font-size: 4rem;\\n    font-weight: 100;\\n    line-height: 1.1;\\n    margin: 2rem auto;\\n    max-width: 14rem;\\n  }\\n\\n  p.s-XsEmFtvddWTw {\\n    max-width: 14rem;\\n    margin: 1rem auto;\\n    line-height: 1.35;\\n  }\\n\\n  @media (min-width: 480px) {\\n    h1.s-XsEmFtvddWTw {\\n      max-width: none;\\n    }\\n\\n    p.s-XsEmFtvddWTw {\\n      max-width: none;\\n    }\\n  }\\n .s-XsEmFtvddWTw{}"
__vite__updateStyle(__vite__id, __vite__css)
import.meta.hot.accept()
import.meta.hot.prune(() => __vite__removeStyle(__vite__id))"
`;

exports[`serve fs output > src/assets/svelte.png__import.js 1`] = `"export default "/src/assets/svelte.png""`;

exports[`serve fs output > src/content.js.js 1`] = `
"import App from "/src/App.svelte.js"

const html = \`<div id="crx-app"></div>\`
const target = new DOMParser().parseFromString(html, 'text/html').body
  .firstElementChild
document.body.append(target)

const app = new App({ target })

export default app
"
`;

exports[`serve fs output > src/content.js-loader.js 1`] = `
"(function () {
  'use strict';

  const injectTime = performance.now();
  (async () => {
    if ("")
      await import(
        /* @vite-ignore */
        chrome.runtime.getURL("")
      );
    await import(
      /* @vite-ignore */
      chrome.runtime.getURL("vendor/vite-client.js")
    );
    const { onExecute } = await import(
      /* @vite-ignore */
      chrome.runtime.getURL("src/content.js.js")
    );
    onExecute?.({ perf: { injectTime, loadTime: performance.now() - injectTime } });
  })().catch(console.error);

})();
"
`;

exports[`serve fs output > src/lib/Counter.svelte.js 1`] = `
"import { createHotContext as __vite__createHotContext } from "/vendor/vite-client.js";import.meta.hot = __vite__createHotContext("/src/lib/Counter.svelte.js");import "/vendor/svelte_internal_disclose-version.js__v--hash.js";
import "/vendor/svelte_internal_flags_legacy.js__v--hash.js";

Counter[$.FILENAME] = 'tests/out/vite-svelte/src/lib/Counter.svelte';

import * as $ from "/vendor/svelte_internal_client.js__v--hash.js";

var root = $.add_locations($.from_html(\`<button class="s-lXDMeZ-gXAhl"> </button>\`), Counter[$.FILENAME], [[8, 0]]);

function Counter($$anchor, $$props) {
	$.check_target(new.target);
	$.push($$props, false, Counter);

	let count = $.mutable_source(0);

	const increment = () => {
		$.set(count, $.get(count) + 1);
	};

	var button = root();
	var text = $.child(button);

	$.reset(button);
	$.template_effect(() => $.set_text(text, \`Clicks: \${$.get(count) ?? ''}\`));
	$.event('click', button, increment);
	$.append($$anchor, button);
	return $.pop({ ...$.legacy_api() });
}

if (import.meta.hot) {
	Counter = $.hmr(Counter, () => Counter[$.HMR].source);

	import.meta.hot.acceptExports(["default"],(module) => {
		$.cleanup_styles('s-lXDMeZ-gXAhl');
		module.default[$.HMR].source = Counter[$.HMR].source;
		$.set(Counter[$.HMR].source, module.default[$.HMR].original);
	});
}

export default Counter;
import "/src/lib/Counter.svelte__svelte_type--style_lang.css.js";
"
`;

exports[`serve fs output > src/lib/Counter.svelte__svelte_type--style_lang.css.js 1`] = `
"import { createHotContext as __vite__createHotContext } from "/vendor/vite-client.js";import.meta.hot = __vite__createHotContext("/src/lib/Counter.svelte__svelte_type--style_lang.css.js");import { updateStyle as __vite__updateStyle, removeStyle as __vite__removeStyle } from "/vendor/vite-client.js"
const __vite__id = "<root>/src/lib/Counter.svelte?svelte&type=style&lang.css"
const __vite__css = "\\n  button.s-lXDMeZ-gXAhl {\\n    font-family: inherit;\\n    font-size: inherit;\\n    padding: 1em 2em;\\n    color: #ff3e00;\\n    background-color: rgba(255, 62, 0, 0.1);\\n    border-radius: 2em;\\n    border: 2px solid rgba(255, 62, 0, 0);\\n    outline: none;\\n    width: 200px;\\n    font-variant-numeric: tabular-nums;\\n    cursor: pointer;\\n  }\\n\\n  button.s-lXDMeZ-gXAhl:focus {\\n    border: 2px solid #ff3e00;\\n  }\\n\\n  button.s-lXDMeZ-gXAhl:active {\\n    background-color: rgba(255, 62, 0, 0.2);\\n  }\\n .s-lXDMeZ-gXAhl{}"
__vite__updateStyle(__vite__id, __vite__css)
import.meta.hot.accept()
import.meta.hot.prune(() => __vite__removeStyle(__vite__id))"
`;

exports[`serve fs output > src/popup.html 1`] = `
"<!DOCTYPE html>
<html lang="en">
  <head>
    <title>Vite Dev Mode</title>
    <script src="/assets/loading-page.hash.js" type="module"></script>
  </head>
  <body
    style="font-family: Arial, sans-serif; padding: 20px; text-align: center"
  >
    <h1>Vite Dev Mode</h1>
  </body>
</html>
"
`;
